manifest-files/db-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: default
spec:
  ClusterIP: None
  selector:
    app: app-db
  ports:
    - port: 3306
      targetPort: 3306
